# UGR

./: .gitignore  .gitmodules  README.md  inicio.cpp
EC/: ejemplo  ensamblador  ensamblador.s  hola  hola.s  popcount  popcount.c  script.s
FP/: variacion_porcentual.cpp
FP/orbitas/: CMakeLists.txt  ej1.1.cpp  ej1.7.cpp
IOmatrices/: tempCodeRunnerFile.cpp
ProyectoFinal/: Makefile
SistemasPlanetarios/: sistema_planetarios.cpp
calculadora/: CMakeLists.txt
centinela2ordenado/: centinela2ordenado_c.cpp
divisor/: CMakeLists.txt
entrega0_numeros/: cartesianas2polares.cpp  dia_semana.cpp  gaussiana.cpp  media_desv_3.cpp  polar2cartesianas.cpp
entrega1_caracteres/: CMakeLists.txt
entrega1_caracteres/aspect_ratio/: aspect_ratio.cpp
entrega1_caracteres/consumo_dia/: consumo_dia.cpp
entrega1_caracteres/letra_alfabeto/: letra_alfabeto.cpp
entrega2_condicionales/: CMakeLists.txt  clasifica_char.cpp  pascua.cpp  plantas.cpp
entrega3_while/: CMakeLists.txt  letra_frecuente.cpp  positivos_negativos.cpp
entrega4_for/: CMakeLists.txt  figuras.cpp  maximo_medias.cpp
entrega5_vector/: buscar_posicion.cpp  buscar_posiciones.cpp  equilibrio_rango.cpp  media_var_desv.cpp  mediana_simple.cpp  pares_impares_simple.cpp
entrega6_matriz/: suma_matrices.cpp  traspuesta.cpp
entrega7_funciones/: funcion_mostrar_mes.cpp  numero_capicua.cpp  primos_relativos.cpp
entrega8_struct/: distancia_puntos.cpp  punto_medio.cpp  racional_struct.cpp
entrega9_vec_struct/: ciudad_poblacion.cpp  ciudad_poblacion_idx.cpp
entregaA_class_vector/: secuencia_ordenada.cpp  separar_pares_impares.cpp  tempCodeRunnerFile.cpp
intro_condicional/: CMakeLists.txt
invrtir_letras/: invertir_letras.cpp
listado_planetas/: listado_planetas.cpp
muestrear_gaussiana/: muestrear_gaussiana.cpp
numero_digitos/: numero_digitos.cpp
sesion4/: ej2  (+3 more)
(+265 files in other folders)
