cmake_minimum_required(VERSION 3.29)
project(entrega3_while)

set(CMAKE_CXX_STANDARD 20)

add_executable(lectura_anticipada lectura_anticipada.cpp)
add_executable(letra_frecuente letra_frecuente.cpp)
add_executable(maratonista maratonistas.cpp)
add_executable(menu_calculadora menu_calculadora.cpp)
add_executable(positivos_negativos positivos_negativos.cpp)
add_executable(rango_temperaturas rango_temperaturas.cpp)
