cmake_minimum_required(VERSION 3.29)
project(entrega4_for)

set(CMAKE_CXX_STANDARD 20)

add_executable(cambio cambio.cpp)
add_executable(figuras figuras.cpp)
add_executable(maximo_medias maximo_medias.cpp)
add_executable(media_varianza media_varianza.cpp)
add_executable(numero_perfecto numero_perfecto.cpp)
add_executable(numero_rango numeros_rango.cpp)
add_executable(recuadro recuadro.cpp)
