cmake_minimum_required(VERSION 3.29)
project(orbitas)

set(CMAKE_CXX_STANDARD 20)

# Add executable for each C++ file
add_executable(orbitas_ej1_1 ej1.1.cpp)
add_executable(orbitas_ej1_2 ej1.2.cpp)
add_executable(orbitas_ej1_3 ej1.3.cpp)
add_executable(orbitas_ej1_4 ej1.4.cpp)
add_executable(orbitas_ej1_6 ej1.6.cpp)
add_executable(orbitas_ej1_7 ej1.7.cpp)
add_executable(orbitasIF orbitasIF.cpp)